--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=33f34f1cd666672622b9a6d423fc68f5
+APP_SECRET=###
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
